--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@
   display: flex;
   gap: 15px;
 }
+
+.add-task-form {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+
+  padding: 30px;
+  border: 2px solid red;
+}
